--- a/app/src/main/res/layout/activity_rorokuning.xml
+++ b/app/src/main/res/layout/activity_rorokuning.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F0F3F8"
-    tools:context=".DetailWisataActivity">
+    tools:context=".DetailWisata">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
