--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -86,7 +86,7 @@
                 android:clickable="true"
                 android:focusable="true" />
 
-            <!-- Nama + Email -->
+            <!-- Nama + Email + Password -->
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -119,6 +119,21 @@
                     android:singleLine="true"
                     android:hint="example@gmail.com"
                     android:inputType="textEmailAddress"/>
+
+                <!-- ✅ Password editable -->
+                <EditText
+                    android:id="@+id/et_user_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_medium"
+                    android:textColor="#4e4e4e"
+                    android:textSize="12sp"
+                    android:ellipsize="end"
+                    android:singleLine="true"
+                    android:hint="Password Baru"
+                    android:inputType="textPassword"
+                    android:layout_marginBottom="12dp"/>
+
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/btn_update"
                     android:layout_width="match_parent"
@@ -132,7 +147,6 @@
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
