--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -135,20 +135,20 @@
         android:textColor="#4E4E4E"
         android:layout_marginBottom="4dp" />
 
-    <EditText
-        android:id="@+id/etEmail"
-        android:layout_width="match_parent"
-        android:layout_height="52dp"
-        android:hint=""
-        android:background="@drawable/edittext_background"
-        android:padding="12dp"
-        android:textColor="@android:color/black"
-        android:textSize="16sp"
-        android:fontFamily="@font/tilt_warp"
-        android:inputType="textEmailAddress"
-        android:imeOptions="actionNext"
-        android:autofillHints="emailAddress"
-        android:layout_marginBottom="16dp" />
+        <EditText
+            android:id="@+id/etEmail"
+            android:layout_width="match_parent"
+            android:layout_height="52dp"
+            android:layout_marginBottom="16dp"
+            android:autofillHints="emailAddress"
+            android:background="@drawable/edittext_background"
+            android:fontFamily="@font/tilt_warp"
+            android:hint=""
+            android:imeOptions="actionNext"
+            android:inputType="textEmailAddress"
+            android:padding="12dp"
+            android:textColor="@android:color/black"
+            android:textSize="16sp" />
 
     <!-- No.Telp -->
     <TextView
